--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "auth0": "^4.2.0",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.16.16",
     "mui": "^0.0.1",
     "react": "^18.2.0",
